# game

./: .clang-format  .gitignore  .gitmodules  2  CMakeLists.txt  compile_commands.json
docs/html/: abstract__image__game__object_8cpp.html  abstract__image__game__object_8cpp_source.html  abstract__image__game__object_8hpp.html  abstract__image__game__object_8hpp.js  abstract__image__game__object_8hpp_source.html  annotated.html  annotated_dup.js  batch__renderer_8cpp.html  batch__renderer_8cpp_source.html  batch__renderer_8hpp.html  batch__renderer_8hpp.js  batch__renderer_8hpp_source.html  button_8cpp.html  button_8cpp_source.html  button_8hpp.html  button_8hpp_source.html  callback__callee_8hpp.html  callback__callee_8hpp.js  callback__callee_8hpp_source.html  callback__caller_8hpp.html  callback__caller_8hpp.js  callback__caller_8hpp_source.html  callback__interface_8hpp.html  callback__interface_8hpp.js  callback__interface_8hpp_source.html  camera__game__object_8cpp.html  camera__game__object_8cpp_source.html  camera__game__object_8hpp.html  camera__game__object_8hpp.js  camera__game__object_8hpp_source.html  chest_8cpp.html  chest_8cpp_source.html  chest_8hpp.html  chest_8hpp.js  chest_8hpp_source.html  classAbstractImageGameObject-members.html  classAbstractImageGameObject.html  classAbstractImageGameObject.js  classBatchRenderer-members.html  classBatchRenderer.html  (+431 more)
docs/latex/: abstract__image__game__object_8cpp.tex  abstract__image__game__object_8cpp_source.tex  abstract__image__game__object_8hpp.tex  abstract__image__game__object_8hpp_source.tex  annotated.tex  batch__renderer_8cpp.tex  batch__renderer_8cpp_source.tex  batch__renderer_8hpp.tex  batch__renderer_8hpp_source.tex  button_8cpp.tex  button_8cpp_source.tex  button_8hpp.tex  button_8hpp_source.tex  callback__callee_8hpp.tex  callback__callee_8hpp_source.tex  callback__caller_8hpp.tex  callback__caller_8hpp_source.tex  callback__interface_8hpp.tex  callback__interface_8hpp_source.tex  camera__game__object_8cpp.tex  camera__game__object_8cpp_source.tex  camera__game__object_8hpp.tex  camera__game__object_8hpp_source.tex  chest_8cpp.tex  chest_8cpp_source.tex  chest_8hpp.tex  chest_8hpp_source.tex  classAbstractImageGameObject.eps  classAbstractImageGameObject.tex  classBatchRenderer.tex  classButton.tex  classCallbackInterface.eps  classCallbackInterface.tex  classCallee.eps  classCallee.tex  classCaller.tex  classCameraGameObject.eps  classCameraGameObject.tex  classChest.eps  classChest.tex  (+240 more)
resources/pixelorama/: spritesheet.pxo  tile_base.pxo  tile_base_cracked.pxo  tile_base_cracked_top_left.pxo  tile_edge_bottom.pxo  tile_edge_left.pxo  tile_edge_right.pxo  (+1 more)
shaders/: batch_renderer_fragment.glsl  batch_renderer_vertex.glsl  font_fragment.glsl  post_processing_fragment.glsl  post_processing_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  game.cpp  game.hpp
src/engine/core/: CMakeLists.txt  camera_game_object.cpp  camera_game_object.hpp  game_object.cpp  game_object.hpp  scene_game_object.cpp  scene_game_object.hpp  sprite_game_object.cpp  sprite_game_object.hpp
src/engine/core/drawables/: CMakeLists.txt  abstract_image_game_object.cpp  abstract_image_game_object.hpp  sprite_game_object.cpp  sprite_game_object.hpp  spritesheet_game_object.cpp  spritesheet_game_object.hpp
src/engine/core/drawables/ui/: CMakeLists.txt  abstract_ui_game_object.hpp
src/engine/debug/: CMakeLists.txt  debug_renderer.cpp  debug_renderer.hpp  debug_shape_renderer.cpp  debug_shape_renderer.hpp  imgui_helper.cpp  imgui_helper.hpp
src/engine/game_objects/: CMakeLists.txt  camera_game_object.cpp  camera_game_object.hpp  game_object.cpp  game_object.hpp  scene_game_object.cpp  scene_game_object.hpp
src/engine/game_objects/colliders/: CMakeLists.txt  collider_game_object.cpp  collider_game_object.hpp  collision_manager.cpp  collision_manager.hpp  rect_collider_game_object.cpp  rect_collider_game_object.hpp
src/engine/game_objects/drawables/: CMakeLists.txt  abstract_image_game_object.cpp  abstract_image_game_object.hpp  drawable_game_object.cpp  drawable_game_object.hpp  sprite_game_object.cpp  sprite_game_object.hpp  spritesheet_game_object.cpp  spritesheet_game_object.hpp  text_game_object.cpp  text_game_object.hpp
src/engine/game_objects/physics/: CMakeLists.txt  physics_game_object.cpp  physics_game_object.hpp  physics_manager.cpp  physics_manager.hpp
src/engine/renderer/: CMakeLists.txt  batch_renderer.cpp  batch_renderer.hpp  font_renderer.cpp  font_renderer.hpp  game_window.cpp  game_window.hpp  post_processor.cpp  post_processor.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp
src/engine/shapes/: CMakeLists.txt  polygon2d.cpp  polygon2d.hpp  shape2d.hpp
src/engine/utils/: CMakeLists.txt  callback_callee.hpp  callback_caller.hpp  callback_interface.hpp
src/engine/window/: CMakeLists.txt  game_window.cpp  game_window.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/game/objects/: CMakeLists.txt  menu_transition.cpp  menu_transition.hpp  player.cpp  player.hpp  replay_manager.cpp  replay_manager.hpp  room_transition.cpp  room_transition.hpp  saver.cpp  saver.hpp
src/game/objects/dungeon/: CMakeLists.txt  dungeon.cpp  dungeon.hpp  dungeon_generator.cpp  dungeon_generator.hpp  dungeon_room.cpp  dungeon_room.hpp  dungeon_room_defines.cpp
src/game/objects/entities/: CMakeLists.txt  chest.cpp  chest.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp
src/game/objects/ui/: CMakeLists.txt  button.cpp  button.hpp  player_ui.cpp  player_ui.hpp
src/game/scenes/: CMakeLists.txt  demo_scene.cpp  demo_scene.hpp  game_scene.cpp  game_scene.hpp  main_menu_scene.cpp  main_menu_scene.hpp  menu_scene.cpp  menu_scene.hpp  scoreboard_scene.cpp  scoreboard_scene.hpp
src/game/utils/: CMakeLists.txt  imgui_helper.cpp  imgui_helper.hpp
src/image/: CMakeLists.txt  image.cpp  image.hpp
src/oop/: singleton.hpp
(+136 files in other folders)
